--- a/404.html
+++ b/404.html
@@ -26,16 +26,16 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   
-  <link href="/css/animate.css" rel="stylesheet">
+  <link href="https://fulljoinblog.github.io/css/animate.css" rel="stylesheet">
 
   
   
-    <link href="/css/style.blue.css" rel="stylesheet" id="theme-stylesheet">
+    <link href="https://fulljoinblog.github.io/css/style.blue.css" rel="stylesheet" id="theme-stylesheet">
   
 
 
   
-  <link href="/css/custom.css" rel="stylesheet">
+  <link href="https://fulljoinblog.github.io/css/custom.css" rel="stylesheet">
 
   
   
@@ -46,14 +46,14 @@
   
 
   
-  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
+  <link rel="shortcut icon" href="https://fulljoinblog.github.io/img/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="https://fulljoinblog.github.io/img/apple-touch-icon.png" />
   
 
-  <link href="/css/owl.carousel.css" rel="stylesheet">
-  <link href="/css/owl.theme.css" rel="stylesheet">
+  <link href="https://fulljoinblog.github.io/css/owl.carousel.css" rel="stylesheet">
+  <link href="https://fulljoinblog.github.io/css/owl.theme.css" rel="stylesheet">
 
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="FullJoin">
+  <link rel="alternate" href="https://fulljoinblog.github.io/index.xml" type="application/rss+xml" title="FullJoin">
 
   
   <meta property="og:title" content="404 Page not found" />
@@ -76,9 +76,9 @@
 
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand home" href="/">
-                    <img src="/img/logo1.png" alt="404 Page not found logo" class="hidden-xs hidden-sm">
-                    <img src="/img/logo-small.png" alt="404 Page not found logo" class="visible-xs visible-sm">
+                <a class="navbar-brand home" href="https://fulljoinblog.github.io/">
+                    <img src="https://fulljoinblog.github.io/img/logo1.png" alt="404 Page not found logo" class="hidden-xs hidden-sm">
+                    <img src="https://fulljoinblog.github.io/img/logo-small.png" alt="404 Page not found logo" class="visible-xs visible-sm">
                     <span class="sr-only">404 Page not found - vá à página inicial</span>
                 </a>
                 <div class="navbar-buttons">
@@ -156,7 +156,7 @@
                     <div class="box">
 
                         <p class="text-center">
-                            <a href="/">
+                            <a href="https://fulljoinblog.github.io/">
                                 <img src="img/testeteste.png" alt="404 Page not found logo">
                             </a>
                         </p>
@@ -164,7 +164,7 @@
                         <h3>We are sorry - this page is not here anymore</h3>
                         <h4 class="text-muted">Error 404 - Page not found</h4>
 
-                        <p class="buttons"><a href="/" class="btn btn-template-main"><i class="fa fa-home"></i> Go to Homepage</a>
+                        <p class="buttons"><a href="https://fulljoinblog.github.io/" class="btn btn-template-main"><i class="fa fa-home"></i> Go to Homepage</a>
                         </p>
                     </div>
 
