--- a/faq/index.html
+++ b/faq/index.html
@@ -26,16 +26,16 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   
-  <link href="/css/animate.css" rel="stylesheet">
+  <link href="https://fulljoinblog.github.io/css/animate.css" rel="stylesheet">
 
   
   
-    <link href="/css/style.blue.css" rel="stylesheet" id="theme-stylesheet">
+    <link href="https://fulljoinblog.github.io/css/style.blue.css" rel="stylesheet" id="theme-stylesheet">
   
 
 
   
-  <link href="/css/custom.css" rel="stylesheet">
+  <link href="https://fulljoinblog.github.io/css/custom.css" rel="stylesheet">
 
   
   
@@ -46,14 +46,14 @@
   
 
   
-  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
+  <link rel="shortcut icon" href="https://fulljoinblog.github.io/img/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="https://fulljoinblog.github.io/img/apple-touch-icon.png" />
   
 
-  <link href="/css/owl.carousel.css" rel="stylesheet">
-  <link href="/css/owl.theme.css" rel="stylesheet">
+  <link href="https://fulljoinblog.github.io/css/owl.carousel.css" rel="stylesheet">
+  <link href="https://fulljoinblog.github.io/css/owl.theme.css" rel="stylesheet">
 
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="FullJoin">
+  <link rel="alternate" href="https://fulljoinblog.github.io/index.xml" type="application/rss+xml" title="FullJoin">
 
   
   <meta property="og:title" content="FAQ" />
@@ -76,9 +76,9 @@
 
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand home" href="/">
-                    <img src="/img/logo1.png" alt="FAQ logo" class="hidden-xs hidden-sm">
-                    <img src="/img/logo-small.png" alt="FAQ logo" class="visible-xs visible-sm">
+                <a class="navbar-brand home" href="https://fulljoinblog.github.io/">
+                    <img src="https://fulljoinblog.github.io/img/logo1.png" alt="FAQ logo" class="hidden-xs hidden-sm">
+                    <img src="https://fulljoinblog.github.io/img/logo-small.png" alt="FAQ logo" class="visible-xs visible-sm">
                     <span class="sr-only">FAQ - vá à página inicial</span>
                 </a>
                 <div class="navbar-buttons">
@@ -321,12 +321,12 @@
 
 <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCFhtWLJcE30xOAjcbSFi-0fnoVmQZPb1Y&v=3.exp"></script>
 
-<script src="/js/hpneo.gmaps.js"></script>
-<script src="/js/gmaps.init.js"></script>
-<script src="/js/front.js"></script>
+<script src="https://fulljoinblog.github.io/js/hpneo.gmaps.js"></script>
+<script src="https://fulljoinblog.github.io/js/gmaps.init.js"></script>
+<script src="https://fulljoinblog.github.io/js/front.js"></script>
 
 
-<script src="/js/owl.carousel.min.js"></script>
+<script src="https://fulljoinblog.github.io/js/owl.carousel.min.js"></script>
 
 
   </body>
